css/responsive.css
/* iPads and Tablets - portrait */

@media screen and (max-width: 768px) {
  /*[aria-controls="navbarDropdown"] {*/
  /*  display: block;*/
  /*}*/

  /*[aria-expanded="false"] ~ ul {*/
  /*  display: none;*/
  /*}*/

  [aria-expanded="true"] ~ ul {
    /*position: absolute;*/
    right: 0;
    top: var(--size-50);
    background-color: var(--white);
    width: 100%;
  }

  [aria-expanded="true"] ~ ul li a {
    color: var(--font-color-dark);
    margin-right: var(--size-20);
  }

  .navbar-nav {
    position: relative;
    top: 2px;
  }

  .nav-link a { margin-right: 20px;
  }

  footer .footer-col:nth-child(3) {
    grid-column: 1 / 3;
  }

  .copyright p {
    position: relative;
    left: 48px;
  }
}

@media screen and (max-width: 599px) {

  /* Start of Hydrosols */

  .artisan-lavender { position: relative; }
  .artisan-lavender, .peppermint-hydrosol, .ginger, .rose, .lemon-balm, .ginger {
    width: 114%;
  }

  .hydrosol {
    display: grid;
    gap: 10em;
    margin-bottom: 146px;
  }

  .image-hydrosol { right: 22px; }

  .hydrosol-overlay { right: 22px; }

  .hydrosol-overlay2 {
    top: 270px;
    left: 40px;
  }

  .hydrosol-overlay3 { left: 40px; }

  .hydrosol-overlay4 {
    top: -46px;
    left: 40px;
  }

  .mango { width: 48%; }

  .image-carrier {
    position: relative;
    top: 16px;
  }



  /* End of Hydrosol */


  /* Start of Footer */
  .copyright p {
    /*position: relative;*/
    /*left: 36px;*/
  }

  /* End of Footer */
}

@media screen and (max-width: 480px) {
  /* Start of Navbar */

  [aria-controls="navbarDropdown"] {
    display: block;
  }

  [aria-expanded="false"] ~ ul {
    display: none;
  }

  [aria-expanded="true"] ~ ul {
    position: absolute;
    right: 0;
    top: 40px;
    background-color: transparent;
  }

  [aria-expanded="true"] ~ ul li a {
    color: var(--white);
    margin-right: var(--size-20);
  }

  .navbar-nav {
    display: flex;
    justify-content: center;
    padding: 10px;
    background-color: transparent;
  }

  .navbar-nav.sticky {
    background-color: var(--white);
  }

  .container { padding-bottom: 24px; }

  .nav-link { position: initial; }

  /*.rwc-logo1 {*/
  /*  display: none;*/
  /*}*/

  .rwc-logo1.sticky {
    display: none;
  }

  .rwc-logo2 {
    display: inherit;
  }

  .navbar.rwc-logo2.sticky {
    display: inherit;
  }

  /* End of Navbar */

  /* Start of Essential Oils */
  .oils {
    display: grid;
    gap: 10em;
    margin-bottom: 146px;
  }

  .oils3 {
    margin-bottom: 250px;
  }

  .lemon, .blood-orange, .green-mandarin { width: 94%; }

  .peppermint, .lavender, .greek-lavender, .frankincense,
  .breathe-clear, .mountain_bandits, .eucalyptus {
    width: 114%;
    right: 30px;
  }

  .image-oils { width: none; }

  .oils-overlay { left: 12px; }

  .oils-overlay2 { left: initial; }

  .oils-overlay3 { left: initial; }




  /* End of Essential Oils */

  /* Start of Hydrosol */

  /*.hydrosol-overlay2-otto { left: 12px: }*/


  /* End of Hydrosol */

  .hero-wrapper { text-align: center; }

  .why-me-wrapper {
    flex-wrap: wrap;
    text-align: center;
  }

  .why-me-wrapper .block-text { padding-right: 0; }

  .why-me-wrapper > div { flex: initial; }

  .price-sheet {
    position: relative;
    top: 60px;
  }

  .bg-price-section { padding-top: 0 }

  .price-card .price-card1 h3 { font-weight: 600; }
  .price-card h3 { font-size: var(--size-20)}

  .price-card1 {
    display: inherit;
    font-size: var(--size-18);
  }

  .side-by-side1 {
    position: relative;
    left: 60px;
  }
  .side-by-side2 {
    position: relative;
    right: 60px;
  }

  .price-card2 { display: none; }

  .salt-therapy { height: auto; }

  /* Start of Contact Page */

  .contact h3, .hours {
    font-size: 1.1rem;
    line-height: 1.3rem;
  }

  /* End of Contact Page */

  /* Start of FAQ Page */

  .accordion, .panel { width: 92% }

  /* End of FAQ Page */

  /* Start of Footer */

  footer .footer-col:nth-child(3) {
    grid-column: initial;
  }

  footer .footer-col:nth-child(1) {
    order: 3;
  }

  .email {
    text-decoration: none;
    color: var(--white);
  }

  .visa { height: 51px; }

  /*.discover {*/
  /*  height: 34px;*/
  /*  width: 46px;*/
  /*  top: 9px;*/
  /*}*/

  .footer-bottom { padding: var(--size-30); }

  .copyright {
    position: relative;
    right: 6px;
  }

  .footer-bottom-links {
    position: relative;
    left: var(--size-10);
  }


  /* End of Footer */
}

@media screen and (max-width: 390px) {




  /* Start of Footer */
  .copyright p {
    left: 36px;
  }

  /* End of Footer */
}

